--- a/index.html
+++ b/index.html
@@ -178,6 +178,19 @@
                     </ul>
                 </div>
             </article>
+            
+            <article>
+                <h3 class="main-title">Code example</h3>
+                <div class="article-content">
+                    <pre>
+                        <code>
+function sumTo(n) {
+  return (n == 1) ? n : (n + sumTo(n - 1));
+}
+                        </code>
+                    </pre>
+                </div>
+            </article>
 
         </main>
         <aside>
