refactor: change contacts

--- a/index.html
+++ b/index.html
@@ -199,11 +199,11 @@ function sumTo(n) {
                 <ul class="contact-list">
                     <li class="contact-element">
                         <span class="fa fa-location-arrow"></span>
-                        <span class="contact-address">19oy Gvardeiskoy divizii,9a, Tomsk, Russia</span>
+                        <span class="contact-address">19oy Gvardeiskoy divizii, Tomsk, Russia</span>
                     </li>
                     <li class="contact-element">
                         <span class="fa fa-phone"></span>
-                        <span class="contact-address">+7 960 977 44 87</span>
+                        <span class="contact-address">+7 777 777 77 77</span>
                     </li>
                     <li class="contact-element">
                         <span class="fa fa-envelope"></span>
