--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 
 <head>
     <meta charset="utf-8">
@@ -68,7 +68,7 @@
                             <li>Creating CMS MODX Revo Templates</li>
                             <li>Adaptive and responsive web development</li>
                             <li>BEM architecture</li>
-                            <li> Webpack and Gulp bundlers</li>
+                            <li>Webpack and Gulp bundlers</li>
                         </ul>
                     </div>
                 </div>
@@ -117,6 +117,16 @@
                         </li>
                         <li class="skills-element">
                             <p>Java Script</p>
+                            <div>
+                                <span class="fa fa-circle checked"></span>
+                                <span class="fa fa-circle checked"></span>
+                                <span class="fa fa-circle checked"></span>
+                                <span class="fa fa-circle checked"></span>
+                                <span class="fa fa-circle"></span>
+                            </div>
+                        </li>
+                        <li class="skills-element">
+                            <p>Type Script</p>
                             <div>
                                 <span class="fa fa-circle checked"></span>
                                 <span class="fa fa-circle checked"></span>
@@ -177,6 +187,105 @@
                         </li>
                     </ul>
                 </div>
+            </article>
+
+            <article>
+                <h3 class="main-title">Project examples</h3>
+
+                <div class="article-content">
+                    <div class="main-subtitle">
+                        <p>RS Lang</p>
+                    </div>
+                    <div class="main-content">
+                        <p><a class="link" href="https://rslang-team4-whattablackhole.netlify.app/">https://rslang-team4-whattablackhole.netlify.app/</a></p>
+                        <p>
+                            RS Lang is an app for learning foreign words that includes an electronic textbook with a base of words to learn,
+                            mini-games to repeat them, and a statistics page to track individual progress.
+                        </p>
+                        <ul>
+                            <li>Angular</li>
+                            <li>Mongoose</li>
+                            <li>Express</li>
+                            <li>SCRUM</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="article-content">
+                    <div class="main-subtitle">
+                        <p>Match-match-game</p>
+                    </div>
+                    <div class="main-content">
+                        <p><a class="link" href="https://evilkami7-jsfe2021q1-match-match.netlify.app/">https://evilkami7-jsfe2021q1-match-match.netlify.app/</a></p>
+                        <p>
+                            Matching games are games that require players to match similar elements.
+                            Participants need to find a match for a word, picture, or card.
+                        </p>
+                        <ul>
+                            <li>Type Script</li>
+                            <li>SPA</li>
+                            <li>IndexedDB</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="article-content">
+                    <div class="main-subtitle">
+                        <p>Async race</p>
+                    </div>
+                    <div class="main-content">
+                        <p><a href="https://evilkami7-jsfe2021q1-async-race.netlify.app/">https://evilkami7-jsfe2021q1-async-race.netlify.app/</a></p>
+                        <p>
+                            Single page app with some radio-controlled equipment radio to real cars car.
+                            Each radio-controller has an HTTP-compatible interface.
+                            It's let you to start or stop engine of the car and of course enable "driving" mode.
+                            You can generate random cards, generate specific car, update car name or color, start or stop car's engine and of course start racing.
+                            Car can stop while racing because of 500 status code coming from json-server.
+                        </p>
+                        <ul>
+                            <li>Type Script</li>
+                            <li>RestAPI</li>
+                            <li>Json Server</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="article-content">
+                    <div class="main-subtitle">
+                        <p>English for kids</p>
+                    </div>
+                    <div class="main-content">
+                        <p><a href="https://evilkami7-jsfe2021q1-english-for-kids.netlify.app/">https://evilkami7-jsfe2021q1-english-for-kids.netlify.app/</a></p>
+                        <p>
+                            Fullstack SPA for learning english where you have 2 mode: training and playing.
+                            In play mode you should click on specific card if it match the spoken word.
+                            You can login as an administrator and change categories or words by your need, add new ones, delete unnecessary ones.
+                        </p>
+                        <ul>
+                            <li>Angular</li>
+                            <li>Mongoose</li>
+                            <li>Express</li>
+                            <li>Swagger</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="article-content">
+                    <div class="main-subtitle">
+                        <p>Online zoo</p>
+                    </div>
+                    <div class="main-content">
+                        <p><a href="https://rolling-scopes-school.github.io/evilkami7-JSFE2021Q1/online-zoo/pages/index.html">https://rolling-scopes-school.github.io/evilkami7-JSFE2021Q1/online-zoo/pages/index.html</a></p>
+                        <p>
+                            Multiple page app online zoo.
+                        </p>
+                        <ul>
+                            <li>SCSS</li>
+                            <li>Slider</li>
+                            <li>Night mode</li>
+                            <li>Java Script</li>
+                            <li>Gulp</li>
+                        </ul>
+                    </div>
+                </div>
+
             </article>
 
         </main>
